--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,15 +248,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv(\"sample.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generated_text\n",
+       "no     14\n",
+       "yes     6\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"generated_text\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://www.ice.com/products/34361119',\n",
+       " 'https://www.ice.com/products/34361119',\n",
+       " 'https://www.ice.com/products/34361119',\n",
+       " 'https://www.federalreserve.gov/monetarypolicy/files/BeigeBook_20240717.pdf',\n",
+       " 'https://www.ice.com/publicdocs/circulars/23037.pdf',\n",
+       " 'https://www.ice.com/publicdocs/futures/IFUS_Fees_Ag_Metal_Currency_Mortgage_SOFR.pdf',\n",
+       " 'https://www.ice.com/energy',\n",
+       " 'https://www.federalreserve.gov/monetarypolicy/files/BeigeBook_20240417.pdf',\n",
+       " 'https://www.esma.europa.eu/sites/default/files/2023-03/Strat%C3%A9gie_de_l%E2%80%99ESMA_2023_-_2028.pdf',\n",
+       " 'https://www.ice.com/contact',\n",
+       " 'https://www.ice.com/contact',\n",
+       " 'https://www.finra.org/sites/default/files/2023-01/sd-2294-butler-122122.pdf',\n",
+       " 'https://www.federalreserve.gov/releases/h8/current/h8.pdf',\n",
+       " 'https://opensource.org/license/php-3-01']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.generated_text == \"no\"].url.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://www.cftc.gov/About/EconomicAnalysis/index.htm',\n",
+       " 'https://www.cftc.gov/Contact/index.htm | http://www.cftc.gov/Contact/index.htm',\n",
+       " 'https://www.esma.europa.eu/esmas-activities/markets-and-infrastructure/short-selling',\n",
+       " 'https://www.federalreserve.gov/supervisionreg.htm',\n",
+       " 'https://www.esma.europa.eu/sites/default/files/2024-07/ESMA32-1283113657-1167_ESMA_CL_Contracts_for_Renewable_Electricity_IASB.pdf',\n",
+       " 'https://www.esma.europa.eu/sites/default/files/library/esma50-164-5623_cre_data_publication_dec2020.pdf']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.generated_text == \"yes\"].url.to_list()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -270,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
