--- a/remove_duplicates.ipynb
+++ b/remove_duplicates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1677, 7, 2605)"
+       "(1925, 7, 2607)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -101,69 +101,110 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>2605</td>\n",
-       "      <td>2605</td>\n",
-       "      <td>2605</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>2545</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2605</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>https://www.ice.com/</td>\n",
+       "      <th>495</th>\n",
+       "      <td>https://www.esma.europa.eu/sites/default/files...</td>\n",
        "      <td>ESMA</td>\n",
-       "      <td>\\n</td>\n",
+       "      <td>ESMA70 -148-2567  \\nUpdate d on 3 September ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1010</td>\n",
-       "      <td>1</td>\n",
+       "      <th>962</th>\n",
+       "      <td>https://www.esma.europa.eu/sites/default/files...</td>\n",
+       "      <td>ESMA</td>\n",
+       "      <td>22 March 2023  \\nESMA 91-372-2226  \\n \\n \\n \\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358</th>\n",
+       "      <td>https://www.esma.europa.eu/sites/default/files...</td>\n",
+       "      <td>ESMA</td>\n",
+       "      <td>\\nDeclaration of Intention  \\n \\nFirst  Name ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>https://www.esma.europa.eu/sites/default/files...</td>\n",
+       "      <td>ESMA</td>\n",
+       "      <td>\\n \\n \\n   \\nRD \\n \\nESMA Risk Dashboard  \\n ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1019</th>\n",
+       "      <td>https://www.govinfo.gov/content/pkg/FR-2022-11...</td>\n",
+       "      <td>FINRA</td>\n",
+       "      <td>66412 Federal Register/ Vol. 87, No. 212 / Thu...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         url source content\n",
-       "count                   2605   2605    2605\n",
-       "unique                  2545     16    2605\n",
-       "top     https://www.ice.com/   ESMA      \\n\n",
-       "freq                       8   1010       1"
+       "                                                    url source  \\\n",
+       "495   https://www.esma.europa.eu/sites/default/files...   ESMA   \n",
+       "962   https://www.esma.europa.eu/sites/default/files...   ESMA   \n",
+       "358   https://www.esma.europa.eu/sites/default/files...   ESMA   \n",
+       "53    https://www.esma.europa.eu/sites/default/files...   ESMA   \n",
+       "1019  https://www.govinfo.gov/content/pkg/FR-2022-11...  FINRA   \n",
+       "\n",
+       "                                                content  \n",
+       "495     ESMA70 -148-2567  \\nUpdate d on 3 September ...  \n",
+       "962   22 March 2023  \\nESMA 91-372-2226  \\n \\n \\n \\n...  \n",
+       "358    \\nDeclaration of Intention  \\n \\nFirst  Name ...  \n",
+       "53     \\n \\n \\n   \\nRD \\n \\nESMA Risk Dashboard  \\n ...  \n",
+       "1019  66412 Federal Register/ Vol. 87, No. 212 / Thu...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_combined.describe()"
+    "df_combined.sample(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "66"
+       "68"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2605-2539"
+    "df_combined.shape[0]-2539"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.678219771563608"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100*((df_combined.shape[0]-2539)/2539)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
