--- a/model/model_usage.ipynb
+++ b/model/model_usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "nvidia-smi output:\n",
       "\n",
-      "Thu Nov  7 23:41:40 2024       \n",
+      "Fri Nov  8 21:11:36 2024       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 560.35.03              Driver Version: 560.35.03      CUDA Version: 12.6     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -20,19 +20,19 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA A40                     On  |   00000000:17:00.0 Off |                    0 |\n",
-      "|  0%   52C    P0             86W /  300W |    3717MiB /  46068MiB |      0%      Default |\n",
+      "|  0%   53C    P0             85W /  300W |    3717MiB /  46068MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "|   1  NVIDIA A40                     On  |   00000000:65:00.0 Off |                    0 |\n",
-      "|  0%   54C    P0             86W /  300W |    3195MiB /  46068MiB |      0%      Default |\n",
+      "|  0%   55C    P0             86W /  300W |    3195MiB /  46068MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "|   2  NVIDIA A40                     On  |   00000000:CA:00.0 Off |                    0 |\n",
-      "|  0%   58C    P0             95W /  300W |     815MiB /  46068MiB |      0%      Default |\n",
+      "|  0%   45C    P0             65W /  300W |       4MiB /  46068MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "|   3  NVIDIA A40                     On  |   00000000:E3:00.0 Off |                    0 |\n",
-      "|  0%   54C    P0             88W /  300W |       4MiB /  46068MiB |      0%      Default |\n",
+      "|  0%   38C    P8             25W /  300W |       4MiB /  46068MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -44,7 +44,6 @@
       "|    0   N/A  N/A     96617      C   ...10/models_citation/myenv/bin/python       3708MiB |\n",
       "|    1   N/A  N/A   1230721      C   /home/historynlp/venv/bin/python3            1414MiB |\n",
       "|    1   N/A  N/A   2212129      C   /home/historynlp/venv/bin/python3            1766MiB |\n",
-      "|    2   N/A  N/A   2212953      C   /home/imartinezm2/myenv/bin/python3           806MiB |\n",
       "+-----------------------------------------------------------------------------------------+\n",
       "\n"
      ]
@@ -75,23 +74,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/smartinez1/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/smartinez1/.venv/lib/python3.10/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: libtorch_cuda_cu.so: cannot open shared object file: No such file or directory\n",
+      "  warn(f\"Failed to load image Python extension: {e}\")\n",
+      "2024-11-08 21:11:38.912317: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-11-08 21:11:39.068802: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-11-08 21:11:39.677787: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2024-11-08 21:11:39.677842: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2024-11-08 21:11:39.677848: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "gpu_index = 3\n",
+    "gpu_index = 2\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = f\"{gpu_index}\"\n",
     "from huggingface_hub import login\n",
     "from transformers import BitsAndBytesConfig, AutoModelForCausalLM, AutoTokenizer\n",
     "import torch\n",
     "from peft import PeftModel, PeftConfig\n",
-    "from transformers import AutoModelForCausalLM, pipeline\n"
+    "from transformers import AutoModelForCausalLM, pipeline\n",
+    "import logging\n",
+    "# Suppress all warnings\n",
+    "logging.getLogger(\"transformers\").setLevel(logging.CRITICAL) #weird warning when using model for inference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████████████| 4/4 [00:02<00:00,  1.44it/s]\n"
+      "Loading checkpoint shards: 100%|██████████████████| 4/4 [00:02<00:00,  1.55it/s]\n"
      ]
     }
    ],
@@ -137,63 +156,64 @@
     "base_model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-3.1-8B\")\n",
     "model = PeftModel.from_pretrained(base_model, \"smartinez1/Llama-3.1-8B-FINLLM\")\n",
     "# Load the tokenizer associated with the base model\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-3.1-8B\")"
+    "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-3.1-8B\")\n",
+    "# Define the unique padding token for fine-tuning\n",
+    "custom_pad_token = \"<|finetune_right_pad_id|>\"\n",
+    "tokenizer.add_special_tokens({'pad_token': custom_pad_token})\n",
+    "pad_token_id = tokenizer.pad_token_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The input should be given as presented in the Challenge website."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The model 'PeftModelForCausalLM' is not supported for text-generation. Supported models are ['BartForCausalLM', 'BertLMHeadModel', 'BertGenerationDecoder', 'BigBirdForCausalLM', 'BigBirdPegasusForCausalLM', 'BioGptForCausalLM', 'BlenderbotForCausalLM', 'BlenderbotSmallForCausalLM', 'BloomForCausalLM', 'CamembertForCausalLM', 'LlamaForCausalLM', 'CodeGenForCausalLM', 'CohereForCausalLM', 'CpmAntForCausalLM', 'CTRLLMHeadModel', 'Data2VecTextForCausalLM', 'DbrxForCausalLM', 'ElectraForCausalLM', 'ErnieForCausalLM', 'FalconForCausalLM', 'FalconMambaForCausalLM', 'FuyuForCausalLM', 'GemmaForCausalLM', 'Gemma2ForCausalLM', 'GitForCausalLM', 'GlmForCausalLM', 'GPT2LMHeadModel', 'GPT2LMHeadModel', 'GPTBigCodeForCausalLM', 'GPTNeoForCausalLM', 'GPTNeoXForCausalLM', 'GPTNeoXJapaneseForCausalLM', 'GPTJForCausalLM', 'GraniteForCausalLM', 'GraniteMoeForCausalLM', 'JambaForCausalLM', 'JetMoeForCausalLM', 'LlamaForCausalLM', 'MambaForCausalLM', 'Mamba2ForCausalLM', 'MarianForCausalLM', 'MBartForCausalLM', 'MegaForCausalLM', 'MegatronBertForCausalLM', 'MistralForCausalLM', 'MixtralForCausalLM', 'MllamaForCausalLM', 'MoshiForCausalLM', 'MptForCausalLM', 'MusicgenForCausalLM', 'MusicgenMelodyForCausalLM', 'MvpForCausalLM', 'NemotronForCausalLM', 'OlmoForCausalLM', 'OlmoeForCausalLM', 'OpenLlamaForCausalLM', 'OpenAIGPTLMHeadModel', 'OPTForCausalLM', 'PegasusForCausalLM', 'PersimmonForCausalLM', 'PhiForCausalLM', 'Phi3ForCausalLM', 'PhimoeForCausalLM', 'PLBartForCausalLM', 'ProphetNetForCausalLM', 'QDQBertLMHeadModel', 'Qwen2ForCausalLM', 'Qwen2MoeForCausalLM', 'RecurrentGemmaForCausalLM', 'ReformerModelWithLMHead', 'RemBertForCausalLM', 'RobertaForCausalLM', 'RobertaPreLayerNormForCausalLM', 'RoCBertForCausalLM', 'RoFormerForCausalLM', 'RwkvForCausalLM', 'Speech2Text2ForCausalLM', 'StableLmForCausalLM', 'Starcoder2ForCausalLM', 'TransfoXLLMHeadModel', 'TrOCRForCausalLM', 'WhisperForCausalLM', 'XGLMForCausalLM', 'XLMWithLMHeadModel', 'XLMProphetNetForCausalLM', 'XLMRobertaForCausalLM', 'XLMRobertaXLForCausalLM', 'XLNetLMHeadModel', 'XmodForCausalLM', 'ZambaForCausalLM'].\n",
-      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n",
-      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User: Provide a link for Credit Card Accountability Responsibility and Disclosure Act law.\n",
-      "AI: Credit Card Accountability Responsibility and Disclosure Act: https://www.federalreserve.gov/publicinfo/files/201407-hfesurvey.pdf\n",
-      "--------------------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User: Define the following term: National Automated Clearing House Association.\n",
-      "AI: A clearinghouse that provides services for the transfer of funds between financial institutions.\n",
+      "User: Provide a link for Regulation A (Extensions of Credit by Federal Reserve Banks) law\n",
+      "AI: Regulation A (Extensions of Credit by Federal Reserve Banks): https://www.federalreserve.gov/newsevents/pressreleases/files/bcreg20240705c1.pdf\n",
       "--------------------------------------------------\n",
-      "User: Expand the following acronym into its full form: ESMA.\n",
-      "AI: European Securities and Markets Authority\n",
+      "User: Define the following term: Insurance Scores.\n",
+      "AI: A credit score based on an insurance underwriting model that evaluates the risk of an individual for insurance purposes.\n",
+      "--------------------------------------------------\n",
+      "User: Expand the following acronym into its full form: ESCB.\n",
+      "AI: European System of Central Banks\n",
+      "--------------------------------------------------\n",
+      "User: Provide a concise answer to the following question: Which countries currently have bilateral FTAs in effect with the U.S.?\n",
+      "AI: As of June 2023, the U.S. has bilateral FTAs in effect with 20 countries: Australia, Bahrain, Canada, Chile, Colombia, Costa Rica, Dominican Republic, El Salvador, Guatemala, Honduras, Israel, Jordan, Mexico, Morocco, Nicaragua, Oman, Panama, Peru, Singapore, and South Korea.\n",
+      "--------------------------------------------------\n",
+      "User: Given the following text, only list the following for each: specific Organizations, Legislations, Dates, Monetary Values, and Statistics When can counterparties start notifying the national competent authorities (NCAs) of their intention to apply the reporting exemption in accordance with Article 9(1) EMIR, as amended by Regulation 2019/834?\n",
+      "AI: From 1 January 2021\n",
+      "--------------------------------------------------\n",
+      "User: Provide a concise answer to the following question: What type of license is the Apache License, Version 2.0?\n",
+      "AI: The Apache License, Version 2.0 is a permissive free software license.\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "from transformers import pipeline\n",
-    "\n",
     "# Set up the text generation pipeline with the PEFT model, specifying the device\n",
     "generator = pipeline(\"text-generation\", model=model, tokenizer=tokenizer, device=device)\n",
     "\n",
     "# List of user inputs\n",
     "user_inputs = [\n",
-    "    \"Provide a link for Credit Card Accountability Responsibility and Disclosure Act law.\",\n",
-    "    \"Define the following term: National Automated Clearing House Association.\",\n",
-    "    \"Expand the following acronym into its full form: ESMA.\"\n",
+    "    \"Provide a link for Regulation A (Extensions of Credit by Federal Reserve Banks) law\",\n",
+    "    \"Define the following term: Insurance Scores.\",\n",
+    "    \"Expand the following acronym into its full form: ESCB.\",\n",
+    "    \"Provide a concise answer to the following question: Which countries currently have bilateral FTAs in effect with the U.S.?\",\n",
+    "    \"\"\"Given the following text, only list the following for each: specific Organizations, Legislations, Dates, Monetary Values, \n",
+    "    and Statistics When can counterparties start notifying the national competent authorities (NCAs) of their intention to apply \n",
+    "    the reporting exemption in accordance with Article 9(1) EMIR, as amended by Regulation 2019/834?\"\"\",\n",
+    "    \"Provide a concise answer to the following question: What type of license is the Apache License, Version 2.0?\"\n",
     "]\n",
     "\n",
     "# Define the prompt template\n",
